add to favorites

--- a/i18n/active.en.toml
+++ b/i18n/active.en.toml
@@ -1,5 +1,6 @@
 AddGamesSub = "Scan your collection"
 AddGamesTab = "Add games"
+AddedToFavorites = "Added to Favorites."
 AssetsDirectory = "Assets Directory"
 AudioVolume = "Audio Volume"
 BluetoothService = "Bluetooth"
@@ -21,6 +22,7 @@ DownloadAlreadyProgress = "A download is already in progress"
 DownloadingUpdate0 = "Downloading update 0%%"
 DownloadingUpdate0f = "Downloading update %.0f%%%% "
 Empty = "Empty"
+EmptyFavorites = "Empty favorites"
 EmptyHistory = "Empty history"
 EmptyPlaylist = "Empty playlist"
 ErrSavingSettings = "Error saving settings: %s"
@@ -28,6 +30,9 @@ Explorer = "Explorer"
 FailedLoadGame = "failed to load the game"
 FastForwardOFF = "Fast forward OFF"
 FastForwardON = "Fast forward ON"
+FavoriteSub = "The best of the best"
+FavoriteTab = "Favorites"
+Favorites = "Favorites"
 FilesDirectory = "Files Directory"
 GameNotFound = "Game not found."
 HBarBack = "BACK"
@@ -107,6 +112,7 @@ Switched2Disk = "Switched to disk %d."
 SystemDirectory = "System Directory"
 TakeScreenshot = "Take Screenshot"
 ThumbnailsDirectory = "Thumbnails Directory"
+ToFavorites = "To Favorites"
 TookScreenshot = "Took a screenshot."
 Unable2GetSRAMAddress = "unable to get SRAM address"
 Up2Date = "Up to date"
