--- a/i18n/translate.ru.toml
+++ b/i18n/translate.ru.toml
@@ -1,3 +1,3 @@
-[nGames]
-hash = "sha1-0cc637c04679beba401a249b697b9f746095cacd"
-other = "%d игр"
+[FavoriteSub]
+hash = "sha1-a6036dd0192bd7a8cbe94bdc94faed0783994e72"
+other = "Лучшее из лучшего"
